--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-loading": "^2.0.3",
     "react-markdown": "^10.1.0",
+    "react-spinners": "^0.17.0",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
     "remark-parse": "^11.0.0",
