--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-markdown": "^10.1.0",
     "react-spinners": "^0.17.0",
     "react-syntax-highlighter": "^15.6.1",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "remark-parse": "^11.0.0",
     "tailwind-merge": "^3.0.2",
@@ -44,3 +45,4 @@
     "tailwindcss": "^4"
   }
 }
+
